@@ -1,5 +1,6 @@
 == master
 
+* Fix validation / save hooks in Sequel 3.14.0+
 * Fix integration with dirty attribute tracking on DataMapper 1.0.1+
 * Fix DataMapper 1.0.1+ tests producing warnings
 * Fix validation error warnings in ActiveModel / ActiveRecord 3.0.0 beta5+
